@@ -1,6 +1,7 @@
 xfburn 0.3.3 (2008-XX-XX)
 ============-------------
 
+- Burn audio CDs from uncompressed CD audio .wav files
 - Allow drags and drop from file managers like Thunar (text/uri-list target)
 - Require HAL if compiled with HAL support
 - Try to unmount a drive if it is not accessible (requires thunar-vfs)
